style.css
/*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */
html,
body,
p,
ol,
ul,
li,
dl,
dt,
dd,
blockquote,
figure,
fieldset,
legend,
textarea,
pre,
iframe,
hr,
h1,
h2,
h3,
h4,
h5,
h6 {
    margin: 0;
    padding: 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-size: 100%;
    font-weight: normal;
}

ul {
    list-style: none;
}

button,
input,
select {
    margin: 0;
}

button,
input,
select,
textarea {
    font-family: inherit;
    font-size: 100%;
}

html {
    box-sizing: border-box;
}

*,
*::before,
*::after {
    box-sizing: inherit;
}

img,
video {
    display: block;
    height: auto;
    max-width: 100%;
}

iframe {
    border: 0;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
}

td,
th {
    padding: 0;
}

/*! minireset.css end */
:root {
    --color-game-background: #CBF3F0;
    --color-playerone: #2EC4B6;
    --color-playerone--light: #CBF3F0;
    --color-playertwo: #FF9F1C;
    --color-playertwo--light: #FFBF69;
}

body {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    background-color: #f7f7f8;
}

.game {
    margin: 4rem auto;
    width: min(60ch, 94%);
}

.game__status {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: .25rem .5rem;
    align-items: center;
    justify-items: center;
    padding: 2.5rem 1rem;

    font-size: 1.4rem;
    font-weight: 500;
}

#game_playerOneName,
#game_playerTwoName {
    background-color: var(--color-playerone);
    padding: .2rem .8rem;
    border-radius: .5rem;
}

#game_playerTwoName {
    background-color: var(--color-playertwo);
}

.game .wrapper {
    padding: 1rem;
    background-color: #fff;
    border-radius: 1rem;
    overflow: hidden;
    border: 1px solid rgba(0, 0, 0, 0.1);
    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.05);
}

.game__board {
    position: relative;
    display: grid;
    grid: auto-flow / repeat(3, 1fr);
    gap: 12px;
}

.game__board > div {
    display: flex;
    justify-content: center;
    align-items: center;
    aspect-ratio: 1;
}

.game__board img {
    width: 70%;
}

.game__board div:nth-of-type(even) {
    color: var(--color-playerone)
}

.game__board div:nth-of-type(odd) {
    color: var(--color-playertwo)
}

div.game_line {
    position: absolute;
    background-color: #4c4c4c;
    border-radius: 1rem;
}

.game_line--h1,
.game_line--h2 {
    height: 12px;
    width: 100%;
    top: calc(33.333% - 8px);
}

.game_line--v1,
.game_line--v2 {
    width: 12px;
    height: 100%;
    left: calc(33.333% - 8px);
}

.game_line--h1 {
    top: calc(66.666% - 4px);
}

.game_line--v1 {
    left: calc(66.666% - 4px);
}

